scrollbar issues pt.2

--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -74,7 +74,6 @@ textarea {
 	flex-direction: column;
 	justify-content: space-between;
 	min-height: 100vh;
-	overflow-y: auto;
 }
 .right-container--overlaid {
     max-height: 100vh;
